--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-storage:11.0.4'
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -31,5 +34,14 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support:support-vector-drawable:26.0.0-alpha1'
+    compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'com.firebaseui:firebase-ui-storage:1.2.0'
     implementation files('libs/picasso-2.5.2.jar')
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
