그룹(방)만들기 기존 친구목록 로직 수정 -> 방을 먼저 만들고 그곳에 대해 초대를 보내는 구조로 변경 파이어베이스 room 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,12 @@
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".ui.f_home.UserInfoActivity" />
         <activity android:name=".ui.f_home.UserInfoActivity2" />
-        <activity android:name=".ui.f_home.AddFriendActivity"
+        <activity
+            android:name=".ui.f_home.AddFriendActivity"
             android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".ui.f_home.CreateRoomActivity"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
 </manifest>
