--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".ui.f_home.CreateRoomActivity"
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity
+            android:name=".ui.f_home.InviteActivity"
             android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
