--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,9 @@
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".ui.f_home.InviteActivity"
-            android:theme="@style/Theme.AppCompat.Dialog"/>
-        <activity android:name=".ui.ChatActivity.ChatActivity"/>
+            android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity android:name=".ui.ChatActivity.ChatActivity" />
+        <activity android:name=".ui.f_album.Album_Adapter2"></activity>
     </application>
 
 </manifest>
