--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
@@ -39,6 +39,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.2.2'
     compile 'com.firebaseui:firebase-ui-storage:1.2.0'
     implementation files('libs/picasso-2.5.2.jar')
+    implementation 'com.android.support:design:26.+'
 }
 
 
