--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.user.with_family">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -45,6 +46,9 @@
             android:name=".ui.f_home.InviteActivity"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".ui.ChatActivity.ChatActivity" />
+        <activity android:name=".ui.Streaming.VoiceActivity"/>
+        <activity android:name=".ui.Streaming.VideoActivity"/>
+        <service android:name=".netWork.MainServiceRecvUDP"/>
     </application>
 
 </manifest>
